--- a/appspec.yml
+++ b/appspec.yml
@@ -2,14 +2,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html
-    overwrite: yes # Ensures existing files are overwritten during deployment
+    destination: /home/ec2-user
 hooks:
-  BeforeInstall:
-    - location: scripts/stop_server.sh
-      timeout: 30
-      runas: root
   AfterInstall:
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
     - location: scripts/start_server.sh
-      timeout: 30
+      timeout: 300
       runas: root
